resolved side scroll on mobile media query

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .navigation {
   height: 20%;
   width: 100%;
-  margin: 1rem;
+  margin: 1rem auto;
   padding: 0;
   border-radius: 15px;
   box-shadow: 0 12px 12px -15px black;
@@ -24,6 +24,7 @@
   }
 }
 .navigation nav .logo {
+  margin-left: 3rem;
   width: 10%;
   height: 10%;
 }
@@ -37,7 +38,7 @@
 .navigation nav .nav-anchors {
   display: flex;
   justify-content: center;
-  width: 45%;
+  width: 35%;
   margin-bottom: 0;
 }
 @media (max-width: 500px) {
@@ -48,7 +49,7 @@
 }
 .navigation nav .nav-anchors a {
   align-content: baseline;
-  width: 9%;
+  width: 8rem;
   color: #27d1f2;
   font-size: 2rem;
   text-align: center;
@@ -287,8 +288,8 @@ img {
 }
 @media (max-width: 500px) {
   .container1 .top-content .product-description p {
+    margin: 5% auto;
     width: 80%;
-    margin: 5%;
   }
 }
 .container1 .top-content p {
@@ -299,7 +300,7 @@ img {
   display: flex;
   flex-direction: column;
   align-content: space-between;
-  width: 35%;
+  width: 25%;
   height: 35rem;
   padding: 2%;
   margin-top: 2%;
