--- a/less/home-container1.less
+++ b/less/home-container1.less
@@ -62,9 +62,8 @@
                 text-align: center;
 
                 @media @mobile {
+                    margin: 5% auto;
                     width: 80%;
-                    margin: 5%;
-
     
                 }
 
@@ -84,7 +83,7 @@
             display: flex;
             flex-direction: column;
             align-content: space-between;
-            width: 35%;
+            width: 25%;
             height: 35rem;
             padding: 2%;
             margin-top: 2%;
