--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 .navigation {
     height: 20%;
     width: 100%;
-    margin: 1rem;
+    margin: 1rem auto;
     padding: 0;
     border-radius: 15px;
     box-shadow: 0 12px 12px -15px black;
@@ -22,6 +22,7 @@
         }
 
         .logo {
+            margin-left:3rem;
             width: 10%;
             height: 10%;
 
@@ -36,7 +37,7 @@
         .nav-anchors{
             display: flex;
             justify-content: center;
-            width: 45%;
+            width: 35%;
             margin-bottom: 0;
 
             @media @mobile {
@@ -47,7 +48,7 @@
 
             a { 
                 align-content: baseline;
-                width: 9%;
+                width: 8rem;
                 color: @logoColor;
                 font-size: 2rem;
                 text-align: center;
