--- a/less/variables.less
+++ b/less/variables.less
@@ -21,3 +21,10 @@
 
 // mobile escape variable
 @mobile: ~'(max-width: 500px)';
+
+@tablet: ~'(max-width: 1000px)';
+// sign up nav anchor needs to reduce width so that 'up' does not bunch up under 'sign'
+
+// maybe make tablet size nav same layout as mobile nav - but anchors more spread out and the height of the nav bar a little less thick
+
+// product description is crowding out register box- need to remain 50/50 proportion of screen size
